# mlops-zoomcamp-course

./: .gitignore  README.md  pyproject.toml
1_week/: duration-prediction.ipynb  homework.ipynb
