[tool.poetry]
name = "mlops-zoomcamp-course"
version = "0.1.0"
description = "Course about MLOps: https://github.com/DataTalksClub/mlops-zoomcamp?tab=readme-ov-file#syllabus"
authors = ["Peter Lukacs <lukacs.peter.andras@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
pyarrow = "^17.0.0"
ipython = "^8.28.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
